[package]
name = "tokio-netstring"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11", features = ["io-util", "macros"] }
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"
