[package]
name = "tokio-netstring-trait"
version = "0.1.0"
edition = "2018"

description = "A trait for tokios AsyncRead to easily read netstrings from streams."
repository = "https://github.com/w1ll-i-code/tokio-netstring"
keywords = ["tokio", "netstring", "trait", "parser"]
categories = ["asynchronous", "encoding", "parser-implementations"]
license-file = "LICENSE"

[dependencies]
tokio = { version = "1", default-features = false, features = ["io-util"]}
log = "0.4"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["macros"]}

[features]
err_drop_message = []
